--- a/src/main/resources/application-sreykhouch.yml
+++ b/src/main/resources/application-sreykhouch.yml
@@ -2,12 +2,12 @@ server:
   port: 8082
 spring:
   datasource:
-    url:
-    username:
-    password:
+    url: jdbc:postgresql://localhost:5432/library_db
+    username: postgres
+    password: 12345
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
