modify swagger ui

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     name: mini-project
   profiles:
     active: huy
+springdoc:
+  swagger-ui:
+    tags-sorter: alpha
+    doc-expansion: false
