--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: mini-project
   profiles:
-    active: huy
+    active: sreykhouch
 springdoc:
   swagger-ui:
     tags-sorter: alpha
